<resources>
    <string name="app_name">Whatsapp</string>
    <string name="password">Password</string>
    <string name="e_mail">E mail</string>
    <string name="username">Username</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="sign_up">Sign Up</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="sign_up_with_phone">Sign up with phone</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create new account</string>
    <string name="sign_in_with_phone">Sign In With phone</string>
</resources>