<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    android:background="#FFFFFF"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="220dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:src="@drawable/ic_chat_icon" />

        <EditText
            android:id="@+id/idUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#F4F4F4"
            android:textAlignment="center"
            android:hint="@string/username"
            android:paddingTop="5dp"
            android:paddingBottom="5dp" />

        <EditText
            android:id="@+id/idEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#F4F4F4"
            android:textAlignment="center"
            android:hint="@string/e_mail"
            android:paddingTop="5dp"
            android:paddingBottom="5dp" />

        <EditText
            android:id="@+id/idPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#F4F4F4"
            android:hint="@string/password"
            android:textAlignment="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp" />
        <TextView
            android:id="@+id/idTextHaveAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="end"
            android:text="@string/already_have_an_account"
            />

        <Button
            android:id="@+id/idBtnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:padding="15dp"
            android:text="@string/sign_up"
            app:cornerRadius="5dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            >

            <Button
                android:id="@+id/idBtnGoogleSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/google"
                android:textColor="#DD0000"
                app:backgroundTint="#FFFFFF"
                app:cornerRadius="5dp" />

            <Button
                android:id="@+id/idBtnFacebookSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:padding="15dp"
                android:text="@string/facebook"
                app:backgroundTint="#1864FB"
                app:cornerRadius="5dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/idTextSignUpPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/sign_up_with_phone"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>